# ifood-tlc-data-engineering-case

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
analysis/: export_case_outputs.py  extra_insights.sql  extra_insights_pyspark.py  mandatory_questions.sql  mandatory_questions_pyspark.py
analysis/outputs/: README.md  execution_summary.md  quality_report_summary.md  question_1_monthly_avg_total_amount.md  question_2_may_hourly_avg_passengers.md
analysis/outputs/quality_report_summary/: part-00000-e1746498-396b-45d7-b334-5785c000b3fb-c000.csv
analysis/outputs/question_1_monthly_avg_total_amount/: part-00000-a3a1265d-0247-4d67-a191-534b11e938a8-c000.csv
analysis/outputs/question_2_may_hourly_avg_passengers/: part-00000-ba3fe199-aeaf-4e37-b3ae-c073fe5e4ed5-c000.csv
configs/: pipeline.yml
docs/: architecture.md  data_dictionary.md  data_quality.md
notebooks/: 01_exploration.py  02_run_pipeline_databricks.py  03_case_analysis.py  04_quality_report.py
scripts/: check_environment.sh  run_pipeline.sh
src/ifood_tlc/: __init__.py  config.py  paths.py  spark.py
src/ifood_tlc/ingestion/: bronze.py
src/ifood_tlc/quality/: __init__.py  yellow_checks.py
src/ifood_tlc/transformations/: __init__.py  gold_yellow.py  silver_yellow.py
src/ifood_tlc/utils/: inspect_landing_schemas.py  organize_landing_files.py
tests/: conftest.py  test_idempotent_all_config.py  test_paths.py  test_quality_checks.py  test_silver_gold_transformations.py
